--- a/test/views/index.ejs
+++ b/test/views/index.ejs
@@ -8,34 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header"><p>THIS MONSTROSITY IS BUILD FOR THE BEAUTIFUL JUDGES IN THEIR INFINITE WISDOM! PRAISE THE JUDGES.</p></div>
     <div class="container">
-        <div class="d-flex">
-        </div>
-        <form action="/generate" method="POST" enctype="application/x-www-form-urlencoded">
-            <div class="input-container">
-                <label for="">ID</label>
-                <input id="template_id" required name="template_id" type="text">
-            </div>
-            <div class="input-container">
-                <label for="">Username</label>
-                <input required name="username" type="text">
-            </div>
-            <div class="input-container">
-                <label for="">Password</label>
-                <input required name="password" type="password">
-            </div>
-            <div class="input-container">
-                <label for="">Upper text</label>
-                <input required name="text0" type="text">
-            </div>
-            <div class="input-container">
-                <label for="">Lower Text</label>
-                <input required name="text1" type="text">
-            </div>
-            <button type="submit" class="btn-primary">
-                Send
-            </button>
-        </form>
     </div>
 </body>
 
